# chord_diagrams

./: .gitignore  assumptions.py  atom.tex  atom_export.tex  chords.py  contradiction.tex  example.py  figure_3_6.py  latex_exporter.py  lukas_t5.tex  lukas_t5_prime.tex  non_crossing.tex  out_tiling.tex  part1.tex  part1_1.tex  part1_2.tex  part2.tex  part2_1.tex  part2_2.tex  part3_1.tex  part3_2.tex  place_point.tex  pyproject.toml  sandbox.py  t1.tex  t2.tex  t3.tex  t3_prime.tex  t4.tex  t4_prime.tex  t5.tex  t5_prime.tex  tempCodeRunnerFile.py  test_auto_open.tex  test_chord_row.tex  test_output.tex  test_partial.tex  tests.py  theorem303.tex  tiling.py  (+3 more)
algorithms/: expansion.py  factor.py  generalized_factor.py  map.py  obstruction_inferral.py  requirement_placement.py  row_col_sep  row_col_sep.py  simplify.py
examples/: demo.py  example.py  figure_3_6.py  sandbox.py  sitecustomize.py
misc/: __init__.py
src/: __init__.py
src/algorithms/: __init__.py  (+8 more)
strategies/: chord_placement.py  factor.py  generalized_factor.py  obstruction_inferral.py  requirement_insertion.py  row_col_separation.py
tests/: __init__.py  _direct_run_bootstrap.py  chord_tests.py  demo.py  fig_3_6_breakdown.py  figure_3_6.py  griddedchord_tests.py  sandbox.py  sitecustomize.py  test_expansion.py  test_factor.py  test_factor2.py  test_generalized_factor.py  test_linkages.py  test_map.py  test_obs_inf.py  test_obs_inf_algo.py  test_pretty_print.py  test_req_ins_strat.py  test_req_pl.py  test_req_pl_algo.py  test_row_col_sep.py  test_simplify.py  test_slow_simplify.py  tiling_tests.py
(+42 files in other folders)
